alignment nav fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -194,7 +194,6 @@ body {
            
             float: none;
             margin: 0 auto;
-            text-align: center;
             padding: 0;
             @media @tablet {
                 /* Hidden until nav icon is clicked */
@@ -281,14 +280,6 @@ body {
                             padding: 0 15px;
                         }
                         &:after {
-                            content: "\25BC";
-                            font-size: 5px;
-                            position: absolute;
-                            top: 1px;
-                            display: block;
-                            z-index: 9999999;
-                            right: 0;
-                            color: @color-swatch6;
                             @media @tablet {
                                 font-size: 10px;
                                 padding-right: 10px;
@@ -351,8 +342,9 @@ body {
     }
 }
 
-.widget .extendednavigation ul li.folder:after {
-    display: none;
+.widget .extendednavigation ul.align-right li.folder:after {
+    left: 5px;
+    right: inherit;
 }
 
 /* ===============================
